--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -15,7 +15,7 @@
     </MButton>
 </MAppBar>
 
-<ScrollContainer Bottom>
+<ScrollContainer>
     <div class="d-md-flex flex-md-row justify-space-between">
         <MHover>
             <MCard @attributes="context.Attrs"
