--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -35,8 +35,7 @@
     </MAppBar>
 
     <ScrollContainer Class="d-flex"
-                 ContentClass="d-flex flex-column flex-grow-1"
-                 OccupyHeight="OccupyHeight">
+                 ContentClass="d-flex flex-column flex-grow-1">
     <div>
         <div class="px-3 d-flex align-end">
             <span class="text-h6 font-weight-bold">
