--- a/SwashbucklerDiary/Components/Swiper/SwiperTabItem.razor
+++ b/SwashbucklerDiary/Components/Swiper/SwiperTabItem.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div class="swiper-slide d-flex overflow-auto">
-    <MContainer Style="position:absolute;width:100%;height:unset;box-sizing:border-box;">
+<div class="swiper-slide overflow-auto" style="position:relative;">
+    <MContainer Style="position:absolute;box-sizing:border-box;">
         @ChildContent
     </MContainer>
 </div>
