--- a/SwashbucklerDiary/Pages/WritePage.razor.css
+++ b/SwashbucklerDiary/Pages/WritePage.razor.css
@@ -14,6 +14,8 @@
     display:flex;
     flex-grow:1;
     flex-direction:column;
+    min-height:0;
+    overflow:auto;
 }
 
 ::deep .write-markdown-wrap {
