--- a/SwashbucklerDiary/Components/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/DiaryCardList.razor
@@ -26,6 +26,8 @@
 
 <SelectTags @bind-Value="ShowSelectTag"
             @bind-Values="SelectedTags"
+            Tags="Tags"
+            TagsChanged="TagsChanged"
             OnSave="SaveSelectTags">
 </SelectTags>
 
