--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -153,6 +153,7 @@
 
 <SelectTags @bind-Value="ShowSelectTag"
             @bind-Values="SelectedTags"
+            @bind-Tags="Tags"
             OnSave="SaveSelectTags">
 </SelectTags>
 
