🐛 fix: Android Back Button  occasionally fails

--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -9,7 +9,7 @@
     <MTextField TValue="string"
                 Value="Search"
                 ValueChanged="TextChanged"
-                Class="ml-3"
+                Class="ml-3 rounded-lg"
                 Solo
                 Flat
                 Autofocus
