--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <ErrorBoundary>
     <ChildContent>
-        <MApp Dark="Dark">
+        <MApp>
             <MainNavigationDrawer @bind-Value="SelectedItemIndex"
                                   Show="ShowNavigationDrawer"
                                   Items="NavigationButtons"
