🆕 feat: add MyDialog

--- a/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MyDialog MyValue="Value"
+<MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420">
     <MCard Rounded="@("lg")">
@@ -23,4 +23,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MyDialog>
+</MMDialog>
