--- a/SwashbucklerDiary/Components/DialogComponents/ExportDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/ExportDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MyDialog MyValue="Value"
+<MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420">
     <MCard Rounded="@("lg")">
@@ -30,4 +30,4 @@
             }
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
