--- a/SwashbucklerDiary/Components/DialogComponents/SelectIconDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectIconDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MyDialog MyValue="Value"
+<MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420"
           Scrollable>
@@ -31,4 +31,4 @@
             </MChipGroup>
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
