--- a/SwashbucklerDiary/Components/MyMenu.razor
+++ b/SwashbucklerDiary/Components/MyMenu.razor
@@ -2,7 +2,7 @@
 
 <MultiDisplay Tablet>
     <MobileContent>
-        <MyBottomSheet MyValue="Value" 
+        <MMBottomSheet MyValue="Value"
                        MyValueChanged="ValueChanged">
             <ActivatorContent>
                 <MButton Icon
@@ -39,7 +39,7 @@
                 </MList>
                 
             </ChildContent>
-        </MyBottomSheet>
+        </MMBottomSheet>
     </MobileContent>
     <DesktopContent>
         <MMenu Value="Value"
