--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -62,7 +62,7 @@
 
 </ScrollContainer>
 
-<MyDialog @bind-MyValue="ShowSourceCode"
+<MMDialog @bind-MyValue="ShowSourceCode"
           MaxWidth="420">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
@@ -90,6 +90,6 @@
             }
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
 
 <SponsorDialog @bind-Value="ShowSponsor" />
