--- a/SwashbucklerDiary/Pages/ExportPage.razor
+++ b/SwashbucklerDiary/Pages/ExportPage.razor
@@ -56,7 +56,7 @@
 
 </ExportDialog>
 
-<MyDialog @bind-MyValue="ShowImport" MaxWidth="420">
+<MMDialog @bind-MyValue="ShowImport" MaxWidth="420">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Export.ConfirmImport.Title"))
@@ -80,4 +80,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MyDialog>
+</MMDialog>
