--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -127,7 +127,7 @@
 
 </ScrollContainer>
 
-<MyDialog MaxWidth="420"
+<MMDialog MaxWidth="420"
           @bind-MyValue="ShowLanguage">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
@@ -156,9 +156,9 @@
             </MRadioGroup>
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
 
-<MyDialog MaxWidth="420"
+<MMDialog MaxWidth="420"
           @bind-MyValue="ShowThemeState">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
@@ -188,9 +188,9 @@
             </MRadioGroup>
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
 
-<MyDialog MaxWidth="420"
+<MMDialog MaxWidth="420"
           @bind-MyValue="ShowFeedback">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
@@ -218,4 +218,4 @@
             }
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
