--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -10,10 +10,10 @@
                 Value="Search"
                 ValueChanged="TextChanged"
                 Class="ml-3 rounded-lg"
-                Solo
-                Flat
-                Autofocus
-                Clearable
+                Solo="true"
+                Flat="true"
+                Autofocus="true"
+                Clearable="true"
                 HideDetails="@("auto")"
                 spellcheck="false"
                 Placeholder="@(I18n.T("Search.Placeholder"))">
