--- a/SwashbucklerDiary/Pages/UserPage.razor
+++ b/SwashbucklerDiary/Pages/UserPage.razor
@@ -89,7 +89,7 @@
     </MCard>
 </ScrollContainer>
 
-<MyDialog MaxWidth="420"
+<MMDialog MaxWidth="420"
           @bind-MyValue="ShowAvatar">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
@@ -126,7 +126,7 @@
             </MListItem>
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
 
 <InputDialog @bind-Value="ShowUserName"
              @bind-Text="UserName"
