--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -4,7 +4,7 @@
 @using FluentValidation;
 
 
-<MyDialog MyValue="Value"
+<MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420"
           @ref="myDialog">
@@ -61,4 +61,4 @@
             </MCardActions>
         </MCard>
     </MForm>
-</MyDialog>
+</MMDialog>
