--- a/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MyDialog MyValue="Value"
+<MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420"
           Scrollable
@@ -50,7 +50,7 @@
             }
         </MCardText>
     </MCard>
-</MyDialog>
+</MMDialog>
 
 <InputDialog @bind-Value="ShowAdd"
              Title="@(I18n.T("Location.Add"))"
